# Youtube_ragbot

./: .gitignore  README.md  api.py  explorations.ipynb  ingestion.py  pyproject.toml  requirements.txt  requiremnts.txt
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
frontend/.streamlit/: config.toml
terraform/: outputs.tf  provider.tf  resources.tf  variabels.tf
