[project]
name = "youtube-ragbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "pydantic-ai>=1.27.0",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
